green test : 수정 날짜에 맞는 Attendance 객체 교환 TDD